--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
     <div class="page-center">
     <div class="custom-form">
         <div class="container">
-            <h1 class="text-center" style="font-weight: bold">Jail Team Interest - Joyce's Text</h1>
-            <p class="text-center" style="font-size: 21px">LET'S STAY IN TOUCH!<br>LEAVE YOUR NUMBER BELOW ⬇</p>
+            <h1 class="text-center" style="font-weight: bold">Elevate Life Church - Jail Update</h1>
+            <p class="text-center" style="font-size: 21px">Thanks for signing up for the Jail Team!<br>LEAVE YOUR NUMBER BELOW ⬇</p>
             <form id="addContact" class="form-horizontal" style="min-width: 100%" method="POST" action="#" autocomplete="false" data-parsley-validate>
                 <div class="form-group">
                     <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 col-lg-4 col-lg-offset-4">
