--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <!--Add your title here-->
-    <title>Elevate Life Church - Jail Update</title>
+    <title>Elevate Life Church - Jail Team</title>
     
     <!--This code makes the website responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -195,7 +195,7 @@
     <div class="page-center">
     <div class="custom-form">
         <div class="container">
-            <h1 class="text-center" style="font-weight: bold">Elevate Life Church - Jail Update</h1>
+            <h1 class="text-center" style="font-weight: bold">Elevate Life Church - Jail Team</h1>
             <p class="text-center" style="font-size: 21px">Thanks for signing up for the Jail Team!<br>LEAVE YOUR NUMBER BELOW ⬇</p>
             <form id="addContact" class="form-horizontal" style="min-width: 100%" method="POST" action="#" autocomplete="false" data-parsley-validate>
                 <div class="form-group">
