--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <!--Add your title here-->
-    <title>Elevate Life Church - Jail Team</title>
+    <title>Elevate Life Church - Jail Team w/Mark</title>
     
     <!--This code makes the website responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
